Fix vertical align of img tag for cross browser compatibility 🐿 v2.12.5

--- a/client/components/o-message-notice.scss
+++ b/client/components/o-message-notice.scss
@@ -26,6 +26,7 @@
 
 	.n-message-notice__image {
 		display: none;
+		vertical-align: top;
 
 		@include oGridRespondTo(M) {
 			display: inline-block;
